// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageLayout > Basic story > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="grid grid-rows-[auto_1fr] [grid-template-areas:"header"_"content"]"
  >
    <div
      class="[grid-area:header] bg-transparent"
    >
      <header
        class="w-full mb-4"
        role="banner"
      >
        <div
          class="w-full mx-auto pt-4 md:pt-10 max-w-7xl"
        >
          <div
            class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 mb-4 px-6"
            data-versaur-page-header-top="true"
          >
            <div
              class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
              data-versaur-page-header-content="true"
            >
              <div
                class="flex items-center justify-between"
              >
                <h1
                  class="text-ghost text-left truncate text-xl font-semibold"
                >
                  Page Title
                </h1>
              </div>
              <p
                class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
              >
                A brief description of this page
              </p>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      class="[grid-area:content] overflow-y-auto min-h-0 bg-transparent"
    >
      <div
        class="w-full"
      >
        <div
          class="w-full mx-auto relative max-w-7xl px-6 pb-10 grid grid-cols-1"
        >
          <div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Section 1
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Section 2
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Section 3
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Section 4
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Section 5
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageLayout > BothGray story > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="grid grid-rows-[auto_1fr] [grid-template-areas:"header"_"content"]"
  >
    <div
      class="[grid-area:header] bg-gray-100"
    >
      <header
        class="w-full mb-4"
        role="banner"
      >
        <div
          class="w-full mx-auto pt-4 md:pt-10 max-w-7xl"
        >
          <div
            class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 mb-4 px-6"
            data-versaur-page-header-top="true"
          >
            <div
              class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
              data-versaur-page-header-content="true"
            >
              <div
                class="flex items-center justify-between"
              >
                <h1
                  class="text-ghost text-left truncate text-xl font-semibold"
                >
                  Reports
                </h1>
              </div>
              <p
                class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
              >
                View and download your reports
              </p>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      class="[grid-area:content] overflow-y-auto min-h-0 bg-gray-100"
    >
      <div
        class="w-full"
      >
        <div
          class="w-full mx-auto relative max-w-7xl px-6 pb-10 grid grid-cols-1"
        >
          <div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Report 1
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Report 2
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Report 3
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Report 4
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Report 5
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageLayout > FluidLayout story > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="grid grid-rows-[auto_1fr] [grid-template-areas:"header"_"content"]"
  >
    <div
      class="[grid-area:header] bg-gray-100"
    >
      <header
        class="w-full mb-4"
        role="banner"
      >
        <div
          class="w-full mx-auto pt-4 md:pt-10 max-w-full"
        >
          <div
            class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 mb-4 px-0"
            data-versaur-page-header-top="true"
          >
            <div
              class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
              data-versaur-page-header-content="true"
            >
              <div
                class="flex items-center justify-between"
              >
                <h1
                  class="text-ghost text-left truncate text-xl font-semibold"
                >
                  Full Width Dashboard
                </h1>
              </div>
              <p
                class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
              >
                Utilize the entire viewport width
              </p>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      class="[grid-area:content] overflow-y-auto min-h-0 bg-transparent"
    >
      <div
        class="w-full"
      >
        <div
          class="w-full mx-auto relative max-w-full px-0 grid grid-cols-1"
        >
          <div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Panel 1
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Panel 2
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Panel 3
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Panel 4
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Panel 5
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageLayout > GrayHeaderWhiteContent story > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="grid grid-rows-[auto_1fr] [grid-template-areas:"header"_"content"]"
  >
    <div
      class="[grid-area:header] bg-gray-100"
    >
      <header
        class="w-full mb-4"
        role="banner"
      >
        <div
          class="w-full mx-auto pt-4 md:pt-10 max-w-7xl"
        >
          <div
            class="mb-4 px-6"
            data-versaur-page-header-breadcrumbs="true"
          >
            <nav
              aria-label="Breadcrumb"
            >
              <ol
                class="flex items-center gap-2 text-sm text-gray-500"
              >
                <li
                  class="flex items-center"
                >
                  <a
                    class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
                    href="/"
                    tabindex="0"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="flex items-center"
                >
                  <a
                    class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
                    href="/analytics"
                    tabindex="0"
                  >
                    Analytics
                  </a>
                </li>
                <li
                  class="flex items-center"
                >
                  <a
                    aria-current="page"
                    class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
                    tabindex="-1"
                  >
                    Dashboard
                  </a>
                </li>
              </ol>
            </nav>
          </div>
          <div
            class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 mb-4 px-6"
            data-versaur-page-header-top="true"
          >
            <div
              class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
              data-versaur-page-header-content="true"
            >
              <div
                class="flex items-center justify-between"
              >
                <h1
                  class="text-ghost text-left truncate text-xl font-semibold"
                >
                  Dashboard
                </h1>
              </div>
              <p
                class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
              >
                Monitor your metrics and performance
              </p>
              <div
                class="flex items-center gap-2 flex-wrap"
                data-versaur-page-header-badges="true"
              >
                <span
                  class="inline-flex items-center justify-center font-medium transition-all duration-200 select-none gap-1 min-h-[1.25rem] rounded-xs text-xs px-1 py-0.25 h-3 bg-success-light/50 text-success-bold"
                >
                  Active
                </span>
                <span
                  class="inline-flex items-center justify-center font-medium transition-all duration-200 select-none gap-1 min-h-[1.25rem] rounded-xs text-xs px-1 py-0.25 h-3 bg-info-light/50 text-info-bold"
                >
                  Beta
                </span>
              </div>
            </div>
            <div
              class="hidden md:flex flex-col sm:flex-row gap-2 sm:gap-3 w-auto sm:ml-auto sm:shrink-0 [&>*]:w-full sm:[&>*]:w-auto"
              data-versaur-page-header-actions="true"
            >
              <button
                class="inline-flex items-center justify-center gap-2 rounded-md font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none cursor-pointer bg-primary text-white hover:bg-primary/90 focus-visible:ring-primary-light focus-visible:ring-offset-white shadow-sm hover:shadow-md h-9 px-4 text-sm min-w-[2.5rem]"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
                Add Widget
              </button>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      class="[grid-area:content] overflow-y-auto min-h-0 bg-transparent"
    >
      <div
        class="w-full"
      >
        <div
          class="w-full mx-auto relative max-w-7xl px-6 pb-10 grid grid-cols-1"
        >
          <div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Widget 1
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Widget 2
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Widget 3
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Widget 4
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Widget 5
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Widget 6
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageLayout > NarrowLayout story > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="grid grid-rows-[auto_1fr] [grid-template-areas:"header"_"content"] [&_[class*="grid-area:header"]]:px-4 [&_[class*="grid-area:header"]]:sm:px-6 [&_[class*="grid-area:header"]]:lg:px-8 [&_[class*="grid-area:content"]]:px-4 [&_[class*="grid-area:content"]]:sm:px-6 [&_[class*="grid-area:content"]]:lg:px-8"
  >
    <div
      class="[grid-area:header] bg-transparent"
    >
      <header
        class="w-full mb-4"
        role="banner"
      >
        <div
          class="w-full mx-auto pt-4 md:pt-10 max-w-3xl"
        >
          <div
            class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 mb-4 px-4"
            data-versaur-page-header-top="true"
          >
            <div
              class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
              data-versaur-page-header-content="true"
            >
              <div
                class="flex items-center justify-between"
              >
                <h1
                  class="text-ghost text-left truncate text-xl font-semibold"
                >
                  Article Title
                </h1>
              </div>
              <p
                class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
              >
                Published on October 25, 2025
              </p>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      class="[grid-area:content] overflow-y-auto min-h-0 bg-transparent"
    >
      <div
        class="w-full"
      >
        <div
          class="w-full mx-auto relative max-w-3xl px-4 pb-10 grid grid-cols-1"
        >
          <div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Paragraph 1
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Paragraph 2
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Paragraph 3
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Paragraph 4
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Paragraph 5
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Paragraph 6
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Paragraph 7
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Paragraph 8
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageLayout > WhiteHeaderGrayContent story > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="grid grid-rows-[auto_1fr] [grid-template-areas:"header"_"content"]"
  >
    <div
      class="[grid-area:header] bg-transparent"
    >
      <header
        class="w-full mb-4"
        role="banner"
      >
        <div
          class="w-full mx-auto pt-4 md:pt-10 max-w-7xl"
        >
          <div
            class="mb-4 px-6"
            data-versaur-page-header-breadcrumbs="true"
          >
            <nav
              aria-label="Breadcrumb"
            >
              <ol
                class="flex items-center gap-2 text-sm text-gray-500"
              >
                <li
                  class="flex items-center"
                >
                  <a
                    class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
                    href="/"
                    tabindex="0"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="flex items-center"
                >
                  <a
                    aria-current="page"
                    class="inline-flex items-center gap-1 transition-colors hover:underline cursor-pointer"
                    tabindex="-1"
                  >
                    Settings
                  </a>
                </li>
              </ol>
            </nav>
          </div>
          <div
            class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 mb-4 px-6"
            data-versaur-page-header-top="true"
          >
            <div
              class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
              data-versaur-page-header-content="true"
            >
              <div
                class="flex items-center justify-between"
              >
                <h1
                  class="text-ghost text-left truncate text-xl font-semibold"
                >
                  Settings
                </h1>
              </div>
              <p
                class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
              >
                Manage your account preferences
              </p>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      class="[grid-area:content] overflow-y-auto min-h-0 bg-gray-100"
    >
      <div
        class="w-full"
      >
        <div
          class="w-full mx-auto relative max-w-7xl px-6 pb-10 grid grid-cols-1"
        >
          <div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Setting Group 1
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Setting Group 2
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Setting Group 3
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Setting Group 4
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageLayout > WithMargins story > renders correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="grid grid-rows-[auto_1fr] [grid-template-areas:"header"_"content"] [&_[class*="grid-area:header"]]:px-4 [&_[class*="grid-area:header"]]:sm:px-6 [&_[class*="grid-area:header"]]:lg:px-8 [&_[class*="grid-area:content"]]:px-4 [&_[class*="grid-area:content"]]:sm:px-6 [&_[class*="grid-area:content"]]:lg:px-8"
  >
    <div
      class="[grid-area:header] bg-transparent"
    >
      <header
        class="w-full mb-4"
        role="banner"
      >
        <div
          class="w-full mx-auto pt-4 md:pt-10 max-w-7xl"
        >
          <div
            class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-4 mb-4 px-6"
            data-versaur-page-header-top="true"
          >
            <div
              class="flex-1 min-w-0 flex flex-col gap-2 w-full sm:w-auto"
              data-versaur-page-header-content="true"
            >
              <div
                class="flex items-center justify-between"
              >
                <h1
                  class="text-ghost text-left truncate text-xl font-semibold"
                >
                  Page with Margins
                </h1>
              </div>
              <p
                class="text-ghost text-left line-clamp-2 text-sm font-normal mb-2 sm:clamp-3"
              >
                Notice the horizontal margins on the layout
              </p>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      class="[grid-area:content] overflow-y-auto min-h-0 bg-transparent"
    >
      <div
        class="w-full"
      >
        <div
          class="w-full mx-auto relative max-w-7xl px-6 pb-10 grid grid-cols-1"
        >
          <div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Section 1
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Section 2
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Section 3
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Section 4
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
            <div
              class="mb-6 rounded-lg bg-primary-soft p-6 text-foreground"
            >
              <h2
                class="mb-2 text-xl font-semibold"
              >
                Section 5
              </h2>
              <p
                class="text-foreground-light"
              >
                This is sample content to demonstrate the page layout behavior.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
